// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preset generator > should run successfully > .codex/config.toml 1`] = `
"[mcp_servers.nx-plugin-for-aws]
command = "npx"
args = [ "-y", "@aws/nx-plugin-mcp" ]
"
`;

exports[`preset generator > should run successfully > .cursor/mcp.json 1`] = `
"{
  "mcpServers": {
    "nx-plugin-for-aws": {
      "command": "npx",
      "args": ["-y", "@aws/nx-plugin-mcp"]
    }
  }
}
"
`;

exports[`preset generator > should run successfully > .gemini/settings.json 1`] = `
"{
  "mcpServers": {
    "nx-plugin-for-aws": {
      "command": "npx",
      "args": ["-y", "@aws/nx-plugin-mcp"]
    }
  }
}
"
`;

exports[`preset generator > should run successfully > .gitignore 1`] = `
".grit
_tmp_*"
`;

exports[`preset generator > should run successfully > .kiro/settings/mcp.json 1`] = `
"{
  "mcpServers": {
    "nx-plugin-for-aws": {
      "command": "npx",
      "args": ["-y", "@aws/nx-plugin-mcp"]
    }
  }
}
"
`;

exports[`preset generator > should run successfully > .mcp.json 1`] = `
"{
  "mcpServers": {
    "nx-plugin-for-aws": {
      "command": "npx",
      "args": ["-y", "@aws/nx-plugin-mcp"]
    }
  }
}
"
`;

exports[`preset generator > should run successfully > .vscode/mcp.json 1`] = `
"{
  "servers": {
    "nx-plugin-for-aws": {
      "type": "stdio",
      "command": "npx",
      "args": ["-y", "@aws/nx-plugin-mcp"]
    }
  }
}
"
`;

exports[`preset generator > should run successfully > README.md 1`] = `
"# proj

✨ Your new, shiny [Nx workspace](https://nx.dev) has been successfully created! ✨.

[Learn more about this workspace setup and the @aws/nx-plugin](https://awslabs.github.io/nx-plugin-for-aws). Now, let's get you up to speed!

## Install Nx Console

Nx Console is an editor extension that enriches your developer experience. It lets you run tasks, generate code, and improves code autocompletion in your IDE. It is available for VSCode and IntelliJ.

[Install Nx Console &raquo;](https://nx.dev/getting-started/editor-setup?utm_source=nx_project&utm_medium=readme&utm_campaign=nx_projects)

## Available generators

The following list of generators are what is currently available in the \`@aws/nx-plugin\`:


- **init**: Configure an existing Nx workspace to use the @aws/nx-plugin

- **agentcore-gateway**: Generate an AgentCore Gateway project

- **agentcore-harness**: Generate an AgentCore Harness project (experimental)

- **connection**: Integrates a source project with a target project

- **greengrass-deployment**: Generate a Greengrass deployment project, vending component-version and deployment infrastructure (experimental)

- **license**: Add LICENSE files and configure source code licence headers

- **py#api**: Create a Python API

- **py#greengrass-component**: Add an AWS IoT Greengrass component to a Python project (experimental)

- **py#lambda-function**: Adds a lambda function to a python project

- **py#mcp-server**: Generate a Python Model Context Protocol (MCP) server for providing context to Large Language Models

- **py#project**: Generates a Python project

- **py#agent**: Add an AI Agent to a Python project

- **smithy#project**: Generate a Smithy model project, either defining a service or a library of reusable shapes

- **terraform#project**: Generates a Terraform project

- **ts#docs**: Generates a documentation site

- **ts#greengrass-component**: Add an AWS IoT Greengrass component to a TypeScript project (experimental)

- **ts#infra**: Generates a cdk application

- **ts#lambda-function**: Generate a TypeScript lambda function

- **ts#dcr-proxy**: Generate an OAuth Dynamic Client Registration (DCR) proxy construct for Cognito-authenticated MCP servers

- **ts#mcp-server**: Generate a TypeScript Model Context Protocol (MCP) server for providing context to Large Language Models

- **ts#nx-generator**: Generator for adding an Nx Generator to an existing TypeScript project

- **ts#nx-migration**: Generator for adding an Nx Migration to an Nx Plugin, applied by nx migrate when users upgrade

- **ts#nx-plugin**: Generate an Nx Plugin of your own! Build custom generators automatically made available for AI vibe-coding via MCP

- **ts#project**: Generates a TypeScript project

- **ts#website**: Generates a website application

- **ts#website#auth**: Adds auth to an existing website

- **ts#agent**: Add an AI Agent to a TypeScript project

- **ts#api**: Create a TypeScript API

- **ts#rdb**: Create a relational database project

- **ts#dynamodb**: Create a TypeScript DynamoDB project

- **py#dynamodb**: Create a Python DynamoDB project

- **py#rdb**: Create a Python relational database project

You also have the option of using additional [commmunity plugins](https://nx.dev/plugin-registry) as needed.

## Invoking a generator

\`\`\`sh
pnpm nx g @aws/nx-plugin:<generator-name>
\`\`\`

Alternatively you can use the Nx IDE plugin to invoke your generators.

Refer to the [full documentation](https://awslabs.github.io/nx-plugin-for-aws) for additional guidance for each generator.

## Common tasks

### Build a single project

\`\`\`sh
pnpm nx build <project-name>
\`\`\`

### Build all projects

\`\`\`sh
pnpm nx run-many --target build --all
# or
pnpm build
\`\`\`

### Run arbitrary task

\`\`\`sh
pnpm nx <target> <project-name>
\`\`\`

### Lint (and fix) all projects

\`\`\`sh
pnpm nx run-many --target lint --configuration=fix --all
# or
pnpm lint
\`\`\`

## Test all projects (and update snapshots)

\`\`\`sh
pnpm nx run-many --target test --all --update
\`\`\`

These targets are either [inferred automatically](https://nx.dev/concepts/inferred-tasks?utm_source=nx_project&utm_medium=readme&utm_campaign=nx_projects) or defined in the \`project.json\` or \`package.json\` files.

[More about running tasks in the Nx docs &raquo;](https://nx.dev/features/run-tasks?utm_source=nx_project&utm_medium=readme&utm_campaign=nx_projects)

## Keep TypeScript project references up to date

Nx automatically updates TypeScript [project references](https://www.typescriptlang.org/docs/handbook/project-references.html) in \`tsconfig.json\` files to ensure they remain accurate based on your project dependencies (\`import\` statements). This sync is automatically done when running tasks such as \`build\`, which require updated references to function correctly.

To manually trigger the process to sync the project graph dependencies information to the TypeScript project references, run the following command:

\`\`\`sh
pnpm nx sync
\`\`\`

You can enforce that the TypeScript project references are always in the correct state when running in CI by adding a step to your CI job configuration that runs the following command:

\`\`\`sh
pnpm nx sync:check
\`\`\`

[Learn more about nx sync](https://nx.dev/reference/nx-commands#sync)

## Set up CI!

Use the following command to configure a CI workflow for your workspace:

\`\`\`sh
pnpm nx g ci-workflow
\`\`\`

[Learn more about Nx on CI](https://nx.dev/ci/intro/ci-with-nx#ready-get-started-with-your-provider?utm_source=nx_project&utm_medium=readme&utm_campaign=nx_projects)

## Useful links

Learn more:

- [@aws/nx-plugin quick-start](https://awslabs.github.io/nx-plugin-for-aws/en/get_started/quick-start/)
- [@aws/nx-plugin AI dungeon game](https://awslabs.github.io/nx-plugin-for-aws/en/get_started/tutorials/dungeon-game/overview/)
- [What are Nx plugins?](https://nx.dev/concepts/nx-plugins?utm_source=nx_project&utm_medium=readme&utm_campaign=nx_projects)
- [Learn about Nx on CI](https://nx.dev/ci/intro/ci-with-nx?utm_source=nx_project&utm_medium=readme&utm_campaign=nx_projects)
"
`;

exports[`preset generator > should run successfully > aws-nx-plugin.config.mts 1`] = `
"import { AwsNxPluginConfig } from '@aws/nx-plugin';

export default {
  iac: { provider: 'cdk' },
  containers: { engine: 'docker' },
  packageManager: { catalogs: true },
} satisfies AwsNxPluginConfig;
"
`;

exports[`preset generator > should run successfully > biome.json 1`] = `
"{
  "$schema": "https://biomejs.dev/schemas/2.5.12/schema.json",
  "root": true,
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 80
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "single",
      "trailingCommas": "all"
    },
    "resolver": {
      "experimentalPnpmCatalogs": true
    }
  },
  "css": {
    "formatter": {
      "quoteStyle": "single"
    },
    "linter": {
      "enabled": false
    }
  },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "none",
      "correctness": {
        "noUndeclaredDependencies": "error"
      }
    }
  },
  "assist": {
    "actions": {
      "source": {
        "organizeImports": "on"
      }
    }
  },
  "files": {
    "includes": [
      "**",
      "!**/dist",
      "!**/out-tsc",
      "!**/test-output",
      "!**/rolldown.config.*.*js",
      "!**/node_modules",
      "!**/.nx",
      "!**/.venv",
      "!**/.grit",
      "!**/*.css",
      "!**/*.gen.*",
      "!**/generated/**",
      "!**/tsconfig*.json"
    ]
  },
  "overrides": [
    {
      "includes": [
        "**/*.config.{ts,mts,cts,js,mjs,cjs}",
        "**/*.{spec,test}.{ts,tsx,mts,cts,js,jsx,mjs,cjs}",
        "**/*.stories.{ts,tsx}"
      ],
      "linter": {
        "rules": {
          "correctness": {
            "noUndeclaredDependencies": "off"
          }
        }
      }
    }
  ]
}
"
`;

exports[`preset generator > should run successfully > nx.json 1`] = `
"{
  "affected": {
    "defaultBase": "main"
  },
  "targetDefaults": {
    "build": {
      "cache": true
    },
    "lint": {
      "cache": true
    },
    "compile": {
      "syncGenerators": ["@nx/js:typescript-sync", "@aws/nx-plugin:ts#sync"]
    }
  },
  "plugins": [
    {
      "plugin": "@nx/js/typescript",
      "options": {
        "typecheck": {
          "targetName": "typecheck"
        },
        "build": {
          "targetName": "build",
          "configName": "tsconfig.lib.json",
          "buildDepsName": "build-deps",
          "watchDepsName": "watch-deps"
        }
      }
    }
  ],
  "analytics": false,
  "parallel": 8
}
"
`;

exports[`preset generator > should run successfully > package.json 1`] = `
"{
  "name": "@proj/source",
  "dependencies": {},
  "devDependencies": {
    "@aws/nx-plugin": "catalog:",
    "@aws/nx-plugin-mcp": "catalog:",
    "@biomejs/biome": "catalog:",
    "@nx/js": "catalog:",
    "@nx/workspace": "catalog:",
    "@swc/helpers": "~0.5.18",
    "nx": "catalog:",
    "typescript": "catalog:"
  },
  "type": "module",
  "workspaces": [
    "packages/*"
  ],
  "scripts": {
    "dev": "nx run-many --target dev",
    "build": "nx run-many --target build",
    "lint": "nx run-many --target lint --configuration=fix",
    "test": "nx run-many --target test --all",
    "trivy": "nx run-many --target trivy --all",
    "build:skip-lint": "nx run-many --target build --configuration=skip-lint",
    "build:all": "nx run-many --target build --all",
    "affected:all": "nx affected --target build"
  }
}
"
`;

exports[`preset generator > should run successfully > packages/.gitkeep 1`] = `""`;

exports[`preset generator > should run successfully > pnpm-workspace.yaml 1`] = `
"packages:
  - packages/*
allowBuilds:
  '@swc/core': true
  esbuild: true
  nx: true
  sharp: true
onlyBuiltDependencies:
  - '@swc/core'
  - esbuild
  - nx
  - sharp
catalogMode: strict
catalog:
  nx: 23.2.0
  '@nx/js': 23.2.0
  '@nx/workspace': 23.2.0
  typescript: ~6.0.3
  '@biomejs/biome': 2.5.12
  '@aws/nx-plugin': ^0.0.0
  '@aws/nx-plugin-mcp': ^0.0.0
"
`;

exports[`preset generator > should run successfully > tsconfig.base.json 1`] = `
"{
  "compilerOptions": {
    "paths": {},
    "composite": true
  }
}
"
`;

exports[`preset generator > should run successfully > tsconfig.json 1`] = `
"{
  "extends": "./tsconfig.base.json",
  "files": [],
  "include": [],
  "references": []
}
"
`;
